Homepage content alignent and basic style
Signed-off-by: Pavol Jr <palo.hlavac95@gmail.com>

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 
     <!-- Main Content -->
     <div class="container">
+      <div class="sericeImages">
       <div class="row">
+
 
         <!-- Service images -->
         <div class="col-sm-3">
@@ -114,9 +116,13 @@
             </a>
           </div>
         </div>
+      </div>
+</div>
+</div>
 
 
 <div class "col-sm-12" style="background-color:#ebc686">
+<div class ="whyChoose">
 <h1> Why choose PSphotoU?</h1>
 <ul>
 
@@ -126,21 +132,51 @@
 <li> We provide inhouse post production for all videos and pictures</li>
 
 </ul>
-
   <a class="btn btn-secondary" href="#">Contact us &rarr;</a>
-
+</div>
 </div>
 
+
+  <div class="container">
+    <div class="row">
 <div class "col-sm-12">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4riGoOdI5U8?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="1140" height="641.25" src="https://www.youtube.com/embed/4riGoOdI5U8?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 
-          <div class="col-lg-8 col-md-10 mx-auto">
-        <hr>
-        <!-- Pager -->
-        <div class="clearfix">
-          <a class="btn btn-secondary float-right" href="#">Older Posts &rarr;</a>
-        </div>
+    <div class="col-lg-8 col-md-10 mx-auto">
+<div class="testimonial">
+      <h1>Testimonials </h1>
+
+
+<h4>"</h4>
+
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum d
+   <h3>- Joe Blogs</h3>
+</p>
+
+
+
+<h4>"</h4>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum d
+   <h3>- Joe Blogs</h3>
+</p>
+
+
+<h4>"</h4>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum d
+   <h3>- Joe Blogss</h3>
+</p>
+</div>
+
       </div>
       </div>
     </div>
@@ -157,14 +193,6 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
@@ -173,12 +201,20 @@
                 <a href="#">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+            <p class="copyright text-muted">Copyright &copy; PSPhotoU 2017</p>
           </div>
         </div>
       </div>
